# Cyber-security-SOC-system-

./: README.md
config/: assets.toml  entities.toml  thresholds.toml
events/configs/: stream.toml
events/generators/: generate_events.py
events/samples/: auth_logs.json  network_logs.json  system_logs.json
flutter-app/: README.md  pubspec.yaml
flutter-app/android/app/: build.gradle.kts
flutter-app/ios/Runner/: Info.plist
flutter-app/ios/Runner.xcodeproj/: project.pbxproj
flutter-app/lib/: main.dart
flutter-app/lib/models/: feedback.dart  feedback.freezed.dart  feedback.g.dart  incident.dart  incident.freezed.dart  incident.g.dart
flutter-app/lib/providers/: incident_provider.dart
flutter-app/lib/screens/: alert_detail_screen.dart  dashboard_screen.dart  feedback_screen.dart  graph_screen.dart  report_screen.dart
flutter-app/lib/services/: api_service.dart  ws_service.dart
flutter-app/linux/: CMakeLists.txt
flutter-app/linux/runner/: my_application.cc
flutter-app/macos/Runner.xcodeproj/: project.pbxproj
flutter-app/macos/Runner/Configs/: AppInfo.xcconfig
flutter-app/web/: index.html
flutter-app/windows/: CMakeLists.txt
flutter-app/windows/runner/: Runner.rc
python-ai/: main.py  requirements.txt  siem.db
python-ai/models/: feedback.py  incident.py  llm_output.py
python-ai/routers/: feedback.py  graph.py  incidents.py  reports.py  siem.py  stream.py
python-ai/services/: anomaly.py  intel.py  llm.py  report.py  rust_client.py  siem.py  websocket.py
python-ai/templates/: fallback.md.j2  report.html.j2
rust-core/: Cargo.toml  baselines.db
rust-core/api-server/: Cargo.toml
rust-core/api-server/src/: main.rs
rust-core/baseline/: Cargo.toml
rust-core/baseline/src/: lib.rs
rust-core/collector/: Cargo.toml
rust-core/collector/src/: lib.rs
rust-core/correlator/: Cargo.toml
rust-core/correlator/src/: lib.rs
rust-core/detector/: Cargo.toml
rust-core/detector/src/: lib.rs
rust-core/entity-resolver/: Cargo.toml
rust-core/entity-resolver/src/: lib.rs
rust-core/event-input/: Cargo.toml
rust-core/event-input/src/: main.rs
rust-core/graph/: Cargo.toml
rust-core/graph/src/: lib.rs
rust-core/normaliser/: Cargo.toml
rust-core/normaliser/src/: lib.rs
rust-core/shared/: Cargo.toml
rust-core/shared/src/: lib.rs
scripts/: run_all.ps1  run_simulation.ps1  setup.ps1
sigma-rules/: brute_force.yml  exfiltration.yml  lateral_movement.yml  privilege_escalation.yml
(+3 files in other folders)
