[package]
name = "api-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
baseline = { path = "../baseline" }
detector = { path = "../detector" }
graph = { path = "../graph" }
correlator = { path = "../correlator" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
tower.workspace = true
tower-http.workspace = true
