[package]
name = "event-input"
version.workspace = true
edition.workspace = true

[[bin]]
name = "event-input"
path = "src/main.rs"

[dependencies]
collector = { path = "../collector" }
shared = { path = "../shared" }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.0", features = ["derive"] }
notify = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
